main layout implementation

--- a/src/pages/list-master/list-master.scss
+++ b/src/pages/list-master/list-master.scss
@@ -1,3 +1,13 @@
 page-list-master {
+  .profile-image {
+    width: 196px;
+    height: 196px;
+    border-radius: 50%;
 
+    display: inline-block;
+    background-color: #2ec95c;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
 }
